--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ plotly = "^6.0.0"
 streamlit = "^1.42.2"
 watchdog = "^6.0.0"
 pillow = "^11.1.0"
+imagehash = "^4.3.2"
+tqdm = "^4.67.1"
+boto3 = "^1.37.2"
+pytesseract = "^0.3.13"
 
 
 [build-system]
